# LLM-building

./: bash.exe.stackdump  main.py  pyproject.toml  readme.md
RAG/pre-retrival/: context.csv  rewrite.py  rewrite[origin].py
RAG/pre-retrival/Retriver/: parentDocRetriver.py
RAG/pre-retrival/chunk/: characterTextSplitter.py  markdownHeaderTextSplitter.py  recursiveCharacterTextSplitter.py  semanticChunker.py  splitByToken.py  state_of_the_union.txt  zhongwen.txt
RAG/tutorial/Advanced-RAG/: README.md
SFT/SFT/: Qwen2.5_(7B)-Alpaca.ipynb
SFT/chinese-llama-alpaca/: build_dataset.py
agent/AutoGenV04/: README.md
agent/AutoGenV04/BasicTest/: 1_Basic.py  2_RunTeam.py  3_HumanFeedback.py  4_HumanFeedback.py  5_RunTeamStream.py  6_RunTeamDeepSeek.py  7_RunTeamDeepSeekOllama.py  8_RunTeamStreamMCP.py  9_RunTeamStreamHttpTool.py
agent/AutoGenV04/MagenticOneCli/: 1_BasicTest.py
agent/Function-calling/: OpenAI开发系列（十一）：Function calling功能的实际应用流程与案例解析.ipynb  readme.md
agent/langgraph/02_ChatBot/: readme.md
agent/mcp/: mcpClient.py  readme.md
agent/mcp/mcp-get-weather(http)/: README.md  client.py  server.py
agent/mcp/mcp-get-weather(sse)/: README.md  pyproject.toml
agent/mcp/mcp-get-weather(sse)/src/mcp_get_weather/: server.py
agent/mcp/simple/: clientSimple.py  readme.md  web_search.py
framework/modelscope/: modelscope-download.py
pytorch/: readme.md
pytorch/第一章：张量的计算和操作/: test1.py  test2.py  test3.py  test4.py
pytorch/第三章：训练数据的处理/image_model/: train_model.py
pytorch/第三章：训练数据的处理/structdata_model/: load_model.py  process_data.py  show_data.py  train_model.py
pytorch/第三章：训练数据的处理/text_model/: test.py  train_model.py
pytorch/第二章：搭建模型/: test1.py  test2.py  test3.py  test4.py  test5.py
pytorch/第四章：深入理解pytorch的模型/: create_loss.py  my_transformer.py  test_loss.py
transformer/moe/: readme.md
transformer/transformer/: readme.md
tutorial/huggingface/: HuggingFace_Tasks.ipynb  huggingface.py
tutorial/langchain-cookbook/: LLaMA2_sql_chat.ipynb  Semi_Structured_RAG.ipynb  Semi_structured_and_multi_modal_RAG.ipynb  Semi_structured_multi_modal_RAG_LLaMA2.ipynb  hugginggpt.ipynb  plan_and_execute_agent.ipynb  sales_agent_with_context.ipynb
(+16 files in other folders)
