[project]
name = "aigc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.12",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.28",
    "mcp[cli]>=1.6.0",
    "openai>=1.72.0",
    "sentence-transformers>=4.0.2",
]
